changed project to 3-spaces indent